Bug 800556; remove nsIDOMCanvasRenderingContext2D; r=Ms2ger,sr=bz

--HG--
extra : rebase_source : 461ff127a453116f3364f4ba1e414cc527f195bd